got Vue running. Improved WorkLog by adding a report and making it easier to enter hours

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -14,9 +14,7 @@ default: &default
   cache_manifest: false
 
   extensions:
-    - .tsx
-    - .ts
-    - .jsx
+    - .vue
     - .js
     - .sass
     - .scss
