runs on ruby 3.0.2 and rails 6. site updates. blog uses markdown

--- a/test/fixtures/blog_posts.yml
+++ b/test/fixtures/blog_posts.yml
@@ -1,19 +1,19 @@
 short:
   user: nate
   subject: short post
-  markup: <h1>short post</h1><p>not truncated</p>
+  markup: "# short post\nwith a paragraph"
 
 long_one_tag:
   user: nate
   subject: long post
-  markup: <h1>long post</h1><p>truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me.  truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me.</p>
+  markup: "# long post\ntruncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me.  truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me. truncate me.\n"
 
 long_multiple_tags:
   user: nate
   subject: long post
-  markup: <h1>long post</h1><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p><p>truncate me. </p>
+  markup: "# long post\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\ntruncate me.\n"
 
 encoded_code_tag:
   user: nate
   subject: html encoded
-  markup: <p>encoded</p><div><div><pre><code><div>foo</div></code></pre></div></div>
+  markup: "encoded\n```{a:12}```"
